# provton

./: .replit  README.md  next.config.ts  package-lock.json  package.json  replit.md
docs/plans/: 2026-01-10-demo-playground-feature.md  2026-01-10-local-profile-extraction.md  2026-01-10-style-profile-integration-plan.md
providertone-local/: .env.example  README.md  pyproject.toml  requirements.txt
providertone-local/src/: __init__.py  cli.py
providertone-local/src/analyzers/: __init__.py  aggregator.py  documentation_analyzer.py  messaging_analyzer.py
providertone-local/src/generators/: __init__.py  documentation_profile.py  exporter.py  messaging_profile.py
providertone-local/src/llm/: __init__.py  base.py  claude_client.py  local_client.py
providertone-local/src/llm/prompts/: documentation_analysis.txt  messaging_analysis.txt  profile_synthesis.txt
providertone-local/src/loaders/: __init__.py  base.py  csv_loader.py  json_loader.py  text_loader.py
providertone-local/src/preprocessors/: __init__.py  message_preprocessor.py  note_preprocessor.py  sampler.py
providertone-local/src/utils/: __init__.py  phi_detector.py  validation.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/generate-drafts/: route.ts
src/app/api/generate-profile/: route.ts
src/app/documentation/step-1/: page.tsx
src/app/summary/: page.tsx
src/components/inputs/: ContrastivePair.tsx  EditableDraft.tsx  MultiSelect.tsx  ScenarioPrompt.tsx  Slider.tsx  index.ts
src/components/layout/: AppLayout.tsx  StepContainer.tsx  TrackLayout.tsx  index.ts
src/context/: ProfileContext.tsx
src/data/: documentationScenarios.ts  messagingScenarios.ts
src/types/: index.ts
(+12 files in other folders)
